tests/fixtures/fail/prelude_option_payload_mismatch.sc
let main(): i32 = {
  let value = Option(i32).Some(true)
  value match {
    Some(item) => item,
    None => 0,
  }
}
